# VisionFlowAI

./: .env.example  .gitignore  README.md  VisionFlowAI_Part3.ipynb  models.py  orchestrator.py  pyproject.toml  requirements.txt  run_workflow.py  test_suite.py
agent_logs/: case_a_critique_agent_output.json  case_a_generation_agent_output.json  case_a_prompt_agent_output.json  case_a_revision_generation_output.json  case_a_revision_prompt_output.json  case_a_vision_agent_output.json  case_b_critique_agent_output.json  case_b_generation_agent_output.json  case_b_prompt_agent_output.json  case_b_revision_generation_output.json  case_b_revision_prompt_output.json  case_b_vision_agent_output.json  case_c_critique_agent_output.json  case_c_generation_agent_output.json  case_c_prompt_agent_output.json  case_c_revision_generation_output.json  case_c_revision_prompt_output.json  case_c_vision_agent_output.json  case_d_critique_agent_output.json  case_d_generation_agent_output.json  case_d_prompt_agent_output.json  case_d_revision_generation_output.json  case_d_revision_prompt_output.json  case_d_vision_agent_output.json  human_evaluation_results.csv  human_evaluation_results.md
agents/: __init__.py  critique_agent.py  generation_agent.py  prompt_agent.py  vision_agent.py
